K8s/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumina-frontend-deployment
  labels:
    app: lumina-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lumina-frontend
  template:
    metadata:
      labels:
        app: lumina-frontend
    spec:
      containers:
      - name: lumina-frontend
        image: nyeinchan312/lumina-frontend:dev
        ports:
        - containerPort: 80
