K8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumina-frontend-service
  labels:
    app: lumina-frontend
spec:
  type: ClusterIP
  selector:
    app: lumina-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
